--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
               </ul>
             </li> -->
             <li class="nav-item">
-              <a class="nav-link active text-light" aria-current="page" href="#contact">Contact</a>
+              <a class="nav-link active text-light" aria-current="page" href="#contact">Contact   </a>
             </li>
-            <!-- <li class="nav-item " style="width: 150px;text-align: center;">
+            <li class="nav-item " style="width: 150px;text-align: center;">
               <a class=" getstart nav-link active border border-2 border-info text-light rounded-pill "
-                aria-current="page" href="#">Get Started</a>
-            </li> -->
+                aria-current="page" href="#">Register now</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -88,8 +88,12 @@
           Platform offers comprehensive services, including a Property Management System (PMS), automated accounting, and a staff-side control application, ensuring seamless operations for hoteliers.
         </p>
         <div class="col-lg-3 align-self-center ps-4">
-          <!-- <a class=" getstart active border border-2 border-white text-light rounded-pill py-3 px-4 text-decoration-none border-outline-none fw-bold"
-            href="#"> G e t   S t a r t</a> -->
+          <a class=" getstart active border border-2 border-white text-light rounded-pill py-3 px-4 "
+            href="./booking.html"> Register Now</a>
+            <!-- <li class="nav-item " style="width: 150px;text-align: center;">
+              <a class=" getstart nav-link active border border-2 border-info text-light rounded-pill "
+                aria-current="page" href="#">Register now</a>
+            </li> -->
         </div>
         <div class="col-lg-3 align-self-center ps-4">
           <!-- <a class=" getstart active border border-2 border-white text-light rounded-pill py-3 px-4 text-decoration-none border-outline-none fw-bold"
