--- a/ready/index.html
+++ b/ready/index.html
@@ -109,28 +109,28 @@
     </div>
     <div style="background-color: #e6e4e4; padding:0px 0px">
       <div class=" row g-0">
-          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-          <!-- <img src="./image/arsha/clients/client-5.png" class="imgpng"> -->
-        </div>
         <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-          <img src="./ready/image/arsha/clients/baithan.png" class="imgpng">
-        </div>
-        <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-          <img src="./ready/image/arsha/clients/booking.com.png" class="imgpng">
-        </div>
-        <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-          <img src="ready\image\arsha\clients\agoda.png" class="imgpng">
-        </div>
-        <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-          <img src="ready\image\arsha\clients\expedia.png" class="imgpng">
-        </div>
-        <!-- <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-          <img src="./image/arsha/clients/client-5.png" class="imgpng">
-        </div> -->
-        <!-- <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-          <img src="./image/arsha/clients/client-6.png" class="imgpng">
-        </div> -->
+        <!-- <img src="./image/arsha/clients/client-5.png" class="imgpng"> -->
       </div>
+      <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+        <img src="./image/arsha/clients/baithan.png" class="imgpng">
+      </div>
+      <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+        <img src="./image/arsha/clients/booking.com.png" class="imgpng">
+      </div>
+      <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+        <img src="./image\arsha\clients\agoda.png" class="imgpng">
+      </div>
+      <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+        <img src="./image\arsha\clients\expedia.png" class="imgpng">
+      </div>
+      <!-- <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+        <img src="./image/arsha/clients/client-5.png" class="imgpng">
+      </div> -->
+      <!-- <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+        <img src="./image/arsha/clients/client-6.png" class="imgpng">
+      </div> -->
+    </div>
     </div>
     <div class="bg-light pb-5 py-4" id="about">
       <div class="text-center py-3">
@@ -664,7 +664,7 @@
         <div class=" shadow mb-md-3 mb-sm-3 serviceb bg-white p-4 rounded-2  " >
           <div class="d-flex align-items-start ">
             <div>
-              <img src="./image/arsha/team/team-4.jpg" class="card-image">
+              <img src="./image/arsha/team/NAHEEL.jpg" class="card-image">
             </div>
             <div class="ps-4 card-info" >
               <h4 style="color: #37517e;">NAHEEL J</h4>
@@ -702,28 +702,32 @@
             <h4 style="color:  rgba(36, 94, 65, 1);" class="fs-1">
               <sup>$</sup>
               0
-              <span class="text-info d-block" style="font-size: 16px;">per month</span>
+              <span class="text-info d-block" style="font-size: 16px;">One month</span>
             </h4>
             <ul class="checkk py-5">
               <li style="font-size: 16px; color:#cdcbcb; padding: 5px;">
                 <i class="fa fa-check text-success"></i>
-                Quam adipiscing vitae proin
+                Tuch trip pms 
               </li>
               <li style="font-size: 16px; color:#cdcbcb; padding: 5px;">
                 <i class="fa fa-check text-success"></i>
-                Nec feugiat nisl pretium
+                Automated Accounts Section
               </li>
-              <li style="font-size: 16px; color:#cdcbcb; padding: 5px;">
+              <!-- <li style="font-size: 16px; color:#cdcbcb; padding: 5px;">
                 <i class="fa fa-check text-success"></i>
                 Nec feugiat nisl pretium
+              </li> -->
+              <li style="font-size: 16px; color:#cdcbcb; padding: 5px;">
+                <i class="fa fa-close " style="color:#ccc ;"></i>
+                <span class="lt">Channel Manager</span>
               </li>
               <li style="font-size: 16px; color:#cdcbcb; padding: 5px;">
                 <i class="fa fa-close " style="color:#ccc ;"></i>
-                <span class="lt">Pharetra massa massa ultricies</span>
+                <span class="lt">Smart Lock Controlling</span>
               </li>
               <li style="font-size: 16px; color:#cdcbcb; padding: 5px;">
                 <i class="fa fa-close " style="color:#ccc ;"></i>
-                <span class="lt">Massa ultricies mi quis hendrerit</span>
+                <span class="lt">Marketing</span>
               </li>
             </ul>
             <a class="border border-1 border-info rounded-pill gtst px-4 py-2 text-decoration-none "
@@ -734,33 +738,40 @@
           class=" rounded-2 shadow mb-md-3 mb-sm-3 mx-lg-3 bg-white border-info border-5 border-top border-bottom pricing-conatiner"
           >
           <div style="padding: 80px 0;">
-            <h3 style="color:  rgba(36, 94, 65, 1);"> Business Plan</h3>
+            <h3 style="color:  rgba(36, 94, 65, 1);"> Base Plan</h3>
             <h4 style="color:  rgba(36, 94, 65, 1);" class="fs-1">
               <sup>$</sup>
-              29
+              99
               <span class="text-info d-block" style="font-size: 16px;">per month</span>
             </h4>
             <ul class="checkk py-5">
               <li style="font-size: 16px; color:#cdcbcb; padding: 5px;">
                 <i class="fa fa-check text-success"></i>
-                Quam adipiscing vitae proin
+                Tuchtrip PMS
+              </li>
+              <!-- <li style="font-size: 16px; color:#cdcbcb; padding: 5px;">
+                <i class="fa fa-check text-success"></i>
+                              </li> -->
+              <li style="font-size: 16px; color:#cdcbcb; padding: 5px;">
+                <i class="fa fa-check text-success"></i>
+                Channel Manager
               </li>
               <li style="font-size: 16px; color:#cdcbcb; padding: 5px;">
                 <i class="fa fa-check text-success"></i>
-                Nec feugiat nisl pretium
+                Automated Accounts Section
               </li>
               <li style="font-size: 16px; color:#cdcbcb; padding: 5px;">
                 <i class="fa fa-check text-success"></i>
-                Nec feugiat nisl pretium
+                Marketing
               </li>
               <li style="font-size: 16px; color:#cdcbcb; padding: 5px;">
                 <i class="fa fa-close " style="color:#ccc ;"></i>
-                <span class="lt">Pharetra massa massa ultricies</span>
+                <span class="lt">Smart Lock System</span>
               </li>
-              <li style="font-size: 16px; color:#cdcbcb; padding: 5px;">
+              <!-- <li style="font-size: 16px; color:#cdcbcb; padding: 5px;">
                 <i class="fa fa-close " style="color:#ccc ;"></i>
-                <span class="lt">Massa ultricies mi quis hendrerit</span>
-              </li>
+                <span class="lt"></span>
+              </li> -->
             </ul>
             <a class="border border-1 border-info rounded-pill bg-info text-white px-4 py-2 text-decoration-none "
               style="margin-bottom: 10px; letter-spacing: 1px;" href="#">Get Started</a>
@@ -768,33 +779,41 @@
         </div>
         <div class=" rounded-2 shadow mb-md-3 mb-sm-3 mx-lg-3 bg-white pricing-conatiner" >
           <div style="padding: 80px 0;">
-            <h3 style="color:  rgba(36, 94, 65, 1);"> Developer Plan</h3>
+            <h3 style="color:  rgba(36, 94, 65, 1);"> Bussiness Plan</h3>
             <h4 style="color:  rgba(36, 94, 65, 1);" class="fs-1">
               <sup>$</sup>
-              49
+              149
               <span class="text-info d-block" style="font-size: 16px;">per month</span>
             </h4>
             <ul class="checkk py-5">
               <li style="font-size: 16px; color:#cdcbcb; padding: 5px;">
                 <i class="fa fa-check text-success"></i>
-                Quam adipiscing vitae proin
+                TuchTrip PMS
               </li>
               <li style="font-size: 16px; color:#cdcbcb; padding: 5px;">
                 <i class="fa fa-check text-success"></i>
-                Nec feugiat nisl pretium
+                Channel Manager
               </li>
               <li style="font-size: 16px; color:#cdcbcb; padding: 5px;">
                 <i class="fa fa-check text-success"></i>
-                Nec feugiat nisl pretium
+                Automated Accounts Section
               </li>
               <li style="font-size: 16px; color:#cdcbcb; padding: 5px;">
+                <i class="fa fa-check text-success"></i>
+                Smart Lock System
+              </li>
+              <li style="font-size: 16px; color:#cdcbcb; padding: 5px;">
+                <i class="fa fa-check text-success"></i>
+                Marketing
+              </li>
+              <!-- <li style="font-size: 16px; color:#cdcbcb; padding: 5px;">
                 <i class="fa fa-close " style="color:#ccc ;"></i>
                 <span class="lt">Pharetra massa massa ultricies</span>
               </li>
               <li style="font-size: 16px; color:#cdcbcb; padding: 5px;">
                 <i class="fa fa-close " style="color:#ccc ;"></i>
                 <span class="lt">Massa ultricies mi quis hendrerit</span>
-              </li>
+              </li> -->
             </ul>
             <a class="border border-1 border-info rounded-pill gtst px-4 py-2 text-decoration-none "
               style="margin-bottom: 10px; letter-spacing: 1px;" href="#">Get Started</a>
@@ -1034,7 +1053,7 @@
               style="color: #fff;background-color:  rgba(36, 94, 65, 1);width: 32px;height: 32px; "><i
                 class="fa fa-instagram"></i></a>
             <a class="rounded-circle p-1 m-1 text-center"
-              style="color: #fff;background-color:  rgba(36, 94, 65, 1);width: 32px;height: 32px; "><i class="fa fa-skype"></i></a>
+              style="color: #fff;background-color:  rgb(70, 88, 79);width: 32px;height: 32px; "><i class="fa fa-skype"></i></a>
             <a class="rounded-circle p-1 m-1 text-center"
               style="color: #fff;background-color:  rgba(36, 94, 65, 1);width: 32px;height: 32px; "><i
                 class="fa fa-linkedin"></i></a>
@@ -1044,8 +1063,8 @@
     </div>
     <div
       class="foot">
-     <a class="nav-link active text-light" aria-current="page" href="www.linkedin.com/in/adil-thengilan-94033a283"> <p>
-        © Copyright <b>ADIL THENGILAN</b>. All Rights Reserved
+     <a class="nav-link active text-light" aria-current="page" href="#"> <p>
+        © Copyright <b>TUCH TRIP</b>. All Rights Reserved
         <!-- <a class="nav-link active text-light" aria-current="page" href="#home">Desgined by ADIL THENGILAN</a> -->
       </p>
     </div>
